# Image Color Picker by Team210
# Copyright (C) 2019  Alexander Kraus <nr4@z10.info>
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

cmake_minimum_required(VERSION 3.12)

project(ImageColorPicker)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt5 COMPONENTS Widgets Gui Network)

set(IMAGE_COLOR_PICKER_SRC
    main.cpp
    ImageColorPicker.ui
    ImageColorPicker.cpp
)

add_executable(ImageColorPicker ${IMAGE_COLOR_PICKER_SRC})
target_link_libraries(ImageColorPicker Qt5::Widgets Qt5::Gui Qt5::Network)

if(WIN32)
    get_filename_component(_qt_bin_dir "${QT_QMAKE_EXECUTABLE}" DIRECTORY)
    find_program(WINDEPLOYQT_EXECUTABLE NAMES windeployqt.exe HINTS "${_qt_bin_dir}")
    message("Found windeployqt executable: ${WINDEPLOYQT_EXECUTABLE}")
    message("Binary is in: $<TARGET_FILE_DIR:ImageColorPicker>")
    add_custom_command(TARGET ImageColorPicker COMMAND ${WINDEPLOYQT_EXECUTABLE} "$<TARGET_FILE_DIR:ImageColorPicker>")
endif()
