[tool.poetry]
name = "imagecolorpicker"
version = "0.1.0"
description = "Image color picker tool by Team210"
authors = ["Alexander Kraus <nr4@z10.info>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PyQt6 = "^6.4.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
scipy = "^1.11.3"
pyglm = "^2.7.0"
lmfit = "^1.2.2"
pyopengl = "^3.1.7"
jinja2 = "^3.1.2"
parse = "^1.19.1"
pip = "^24.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
distro = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.qt-designer.widgets]
site = []
source = [
    ".",
]
