[tool.poetry]
name = "imagecolorpicker"
version = "0.1.0"
description = "Image color picker tool by Team210"
authors = ["Alexander Kraus <nr4@z10.info>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
PyQt6 = "^6.4.2"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
scipy = "^1.11.3"
pyglm = "^2.7.0"
lmfit = "^1.2.2"
pyopengl = "^3.1.7"
jinja2 = "^3.1.2"
parse = "^1.19.1"
pip = "^24.0"
pylette = "^4.0.1"
rtoml = "^0.11.0"
construct = "^2.10.70"
networkx = "^3.4.2"
matplotlib = "^3.10.1"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.0.0"
distro = "^1.8.0"
pygit2 = "^1.16.0"
deepdiff = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.qt-designer.widgets]
site = []
source = [
    ".",
]
